--- a/Makefile.vstlinux
+++ b/Makefile.vstlinux
@@ -60,9 +60,9 @@ LIBS+=-ldl
 CFLAGS+=-fPIC -D__cdecl=
 
 ifeq ($(DEBUG),YES)
-	CFLAGS+=-g -O0
+    CFLAGS+=-g -O0
 else
-	CFLAGS+=-s -O3
+    CFLAGS+=-s -O3
 endif
 
 ARCH := $(shell getconf LONG_BIT)
@@ -73,13 +73,13 @@ endif
 all: oxevst$(ARCH)
 
 oxevst32: bitmaps.cpp
-	@g++ -shared $(BITS) -o oxevst32.so $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
+	@$(CXX) -shared $(BITS) -o oxevst32.so $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
 
 oxevst64: bitmaps.cpp
-	@g++ -shared -m64    -o oxevst64.so $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
+	@$(CXX) -shared -m64    -o oxevst64.so $(CFLAGS) $(SOURCES) $(INCLUDES) $(LIBS)
 
 bitmaps.cpp:
-	@$(CC) -o embedresources src/toolkits/embedresources.cpp
+	@$(CXX) -o embedresources src/toolkits/embedresources.cpp
 	@./embedresources $@
 	@rm embedresources
 
