--- a/Makefile.demo
+++ b/Makefile.demo
@@ -36,18 +36,18 @@ SOURCES+=src/synth/noise.cpp
 SOURCES+=src/synth/synthesizer.cpp
 
 ifeq ($(DEBUG),YES)
-    CFLAGS+=-g -O0
+    CXXFLAGS+=-g -O0
 else
-    CFLAGS+=-O3
+    CXXFLAGS+=-O3
 endif
 
 ifeq ($(PROFILING),YES)
-    CFLAGS+=-D__RENDER_TO_MEMORY__ONLY__
-    #CFLAGS+=-nostdlib
+    CXXFLAGS+=-D__RENDER_TO_MEMORY__ONLY__
+    #CXXFLAGS+=-nostdlib
 endif
 
 ifeq ($(WITH_DSOUND),YES)
-    CFLAGS+=-D__WITH_DSOUND__
+    CXXFLAGS+=-D__WITH_DSOUND__
     LDFLAGS+=-ldsound
 endif
 
@@ -69,7 +69,7 @@ else
 endif
 
 all:
-	@$(CXX) -o $(EXECUTABLE_NAME) -DEXECUTABLE_NAME=\"$(EXECUTABLE_NAME)\" -D__OXEDMO__ $(CFLAGS) $(SOURCES) $(INCLUDES) $(LDFLAGS)
+	@$(CXX) -o $(EXECUTABLE_NAME) -DEXECUTABLE_NAME=\"$(EXECUTABLE_NAME)\" -D__OXEDMO__ $(CXXFLAGS) $(SOURCES) $(INCLUDES) $(LDFLAGS)
 
 clean:
 	@rm -f $(EXECUTABLE_NAME) *.wav
